react/reactParser.py
# Generated from react.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class reactParser ( Parser ):

    grammarFileName = "react.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "';'", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'D['", "']'", "'->'", "'='", "'.'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "SEMICOLON", "SYMBOL", "SCIENTIFIC_NUMBER", 
                      "PLUS", "MINUS", "LDIFFBRACKET", "RBRACKET", "PRODUCE", 
                      "EQUAL", "POINT", "WHITESPACE" ]

    RULE_entries = 0
    RULE_entry = 1
    RULE_reaction = 2
    RULE_diffusion = 3
    RULE_dvalue = 4
    RULE_beta = 5
    RULE_eactivation = 6
    RULE_aconstant = 7
    RULE_rate = 8
    RULE_products = 9
    RULE_product = 10
    RULE_reactants = 11
    RULE_reactant = 12
    RULE_cvalue = 13
    RULE_constant = 14
    RULE_symbol = 15
    RULE_combineOperator = 16
    RULE_scientific = 17

    ruleNames =  [ "entries", "entry", "reaction", "diffusion", "dvalue", 
                   "beta", "eactivation", "aconstant", "rate", "products", 
                   "product", "reactants", "reactant", "cvalue", "constant", 
                   "symbol", "combineOperator", "scientific" ]

    EOF = Token.EOF
    COMMENT=1
    SEMICOLON=2
    SYMBOL=3
    SCIENTIFIC_NUMBER=4
    PLUS=5
    MINUS=6
    LDIFFBRACKET=7
    RBRACKET=8
    PRODUCE=9
    EQUAL=10
    POINT=11
    WHITESPACE=12

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class EntriesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reactParser.EntryContext)
            else:
                return self.getTypedRuleContext(reactParser.EntryContext,i)


        def getRuleIndex(self):
            return reactParser.RULE_entries

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntries" ):
                return visitor.visitEntries(self)
            else:
                return visitor.visitChildren(self)




    def entries(self):

        localctx = reactParser.EntriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_entries)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.entry()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << reactParser.COMMENT) | (1 << reactParser.SYMBOL) | (1 << reactParser.SCIENTIFIC_NUMBER) | (1 << reactParser.PLUS) | (1 << reactParser.MINUS) | (1 << reactParser.LDIFFBRACKET))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EntryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(reactParser.COMMENT, 0)

        def SEMICOLON(self):
            return self.getToken(reactParser.SEMICOLON, 0)

        def constant(self):
            return self.getTypedRuleContext(reactParser.ConstantContext,0)


        def diffusion(self):
            return self.getTypedRuleContext(reactParser.DiffusionContext,0)


        def reaction(self):
            return self.getTypedRuleContext(reactParser.ReactionContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_entry

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntry" ):
                return visitor.visitEntry(self)
            else:
                return visitor.visitChildren(self)




    def entry(self):

        localctx = reactParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entry)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [reactParser.COMMENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(reactParser.COMMENT)
                pass
            elif token in [reactParser.SYMBOL, reactParser.SCIENTIFIC_NUMBER, reactParser.PLUS, reactParser.MINUS, reactParser.LDIFFBRACKET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 42
                    self.constant()
                    pass

                elif la_ == 2:
                    self.state = 45
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [reactParser.LDIFFBRACKET]:
                        self.state = 43
                        self.diffusion()
                        pass
                    elif token in [reactParser.SYMBOL, reactParser.SCIENTIFIC_NUMBER, reactParser.PLUS, reactParser.MINUS]:
                        self.state = 44
                        self.reaction()
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass


                self.state = 49
                self.match(reactParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReactionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reactants(self):
            return self.getTypedRuleContext(reactParser.ReactantsContext,0)


        def PRODUCE(self):
            return self.getToken(reactParser.PRODUCE, 0)

        def products(self):
            return self.getTypedRuleContext(reactParser.ProductsContext,0)


        def rate(self):
            return self.getTypedRuleContext(reactParser.RateContext,0)


        def aconstant(self):
            return self.getTypedRuleContext(reactParser.AconstantContext,0)


        def eactivation(self):
            return self.getTypedRuleContext(reactParser.EactivationContext,0)


        def beta(self):
            return self.getTypedRuleContext(reactParser.BetaContext,0)


        def scientific(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reactParser.ScientificContext)
            else:
                return self.getTypedRuleContext(reactParser.ScientificContext,i)


        def getRuleIndex(self):
            return reactParser.RULE_reaction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReaction" ):
                return visitor.visitReaction(self)
            else:
                return visitor.visitChildren(self)




    def reaction(self):

        localctx = reactParser.ReactionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_reaction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.reactants()
            self.state = 54
            self.match(reactParser.PRODUCE)
            self.state = 55
            self.products()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==reactParser.SYMBOL:
                self.state = 56
                self.rate()


            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 59
                self.aconstant()


            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 62
                self.eactivation()


            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << reactParser.SCIENTIFIC_NUMBER) | (1 << reactParser.PLUS) | (1 << reactParser.MINUS))) != 0):
                self.state = 65
                self.beta()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << reactParser.SCIENTIFIC_NUMBER) | (1 << reactParser.PLUS) | (1 << reactParser.MINUS))) != 0):
                    self.state = 66
                    self.scientific()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DiffusionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LDIFFBRACKET(self):
            return self.getToken(reactParser.LDIFFBRACKET, 0)

        def symbol(self):
            return self.getTypedRuleContext(reactParser.SymbolContext,0)


        def RBRACKET(self):
            return self.getToken(reactParser.RBRACKET, 0)

        def EQUAL(self):
            return self.getToken(reactParser.EQUAL, 0)

        def dvalue(self):
            return self.getTypedRuleContext(reactParser.DvalueContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_diffusion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiffusion" ):
                return visitor.visitDiffusion(self)
            else:
                return visitor.visitChildren(self)




    def diffusion(self):

        localctx = reactParser.DiffusionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_diffusion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(reactParser.LDIFFBRACKET)
            self.state = 75
            self.symbol()
            self.state = 76
            self.match(reactParser.RBRACKET)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==reactParser.EQUAL:
                self.state = 77
                self.match(reactParser.EQUAL)
                self.state = 78
                self.dvalue()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DvalueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(reactParser.ScientificContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_dvalue

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDvalue" ):
                return visitor.visitDvalue(self)
            else:
                return visitor.visitChildren(self)




    def dvalue(self):

        localctx = reactParser.DvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.scientific()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BetaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(reactParser.ScientificContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_beta

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeta" ):
                return visitor.visitBeta(self)
            else:
                return visitor.visitChildren(self)




    def beta(self):

        localctx = reactParser.BetaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_beta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.scientific()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EactivationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(reactParser.ScientificContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_eactivation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEactivation" ):
                return visitor.visitEactivation(self)
            else:
                return visitor.visitChildren(self)




    def eactivation(self):

        localctx = reactParser.EactivationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_eactivation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.scientific()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AconstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(reactParser.ScientificContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_aconstant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAconstant" ):
                return visitor.visitAconstant(self)
            else:
                return visitor.visitChildren(self)




    def aconstant(self):

        localctx = reactParser.AconstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_aconstant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.scientific()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(reactParser.SymbolContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_rate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRate" ):
                return visitor.visitRate(self)
            else:
                return visitor.visitChildren(self)




    def rate(self):

        localctx = reactParser.RateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.symbol()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProductsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def product(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reactParser.ProductContext)
            else:
                return self.getTypedRuleContext(reactParser.ProductContext,i)


        def combineOperator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reactParser.CombineOperatorContext)
            else:
                return self.getTypedRuleContext(reactParser.CombineOperatorContext,i)


        def getRuleIndex(self):
            return reactParser.RULE_products

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProducts" ):
                return visitor.visitProducts(self)
            else:
                return visitor.visitChildren(self)




    def products(self):

        localctx = reactParser.ProductsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_products)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.product()
            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 92
                    self.combineOperator()
                    self.state = 93
                    self.product() 
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProductContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(reactParser.SymbolContext,0)


        def scientific(self):
            return self.getTypedRuleContext(reactParser.ScientificContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_product

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProduct" ):
                return visitor.visitProduct(self)
            else:
                return visitor.visitChildren(self)




    def product(self):

        localctx = reactParser.ProductContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_product)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << reactParser.SCIENTIFIC_NUMBER) | (1 << reactParser.PLUS) | (1 << reactParser.MINUS))) != 0):
                self.state = 100
                self.scientific()


            self.state = 103
            self.symbol()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReactantsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reactant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reactParser.ReactantContext)
            else:
                return self.getTypedRuleContext(reactParser.ReactantContext,i)


        def combineOperator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(reactParser.CombineOperatorContext)
            else:
                return self.getTypedRuleContext(reactParser.CombineOperatorContext,i)


        def getRuleIndex(self):
            return reactParser.RULE_reactants

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReactants" ):
                return visitor.visitReactants(self)
            else:
                return visitor.visitChildren(self)




    def reactants(self):

        localctx = reactParser.ReactantsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_reactants)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.reactant()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==reactParser.PLUS:
                self.state = 106
                self.combineOperator()
                self.state = 107
                self.reactant()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReactantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(reactParser.SymbolContext,0)


        def scientific(self):
            return self.getTypedRuleContext(reactParser.ScientificContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_reactant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReactant" ):
                return visitor.visitReactant(self)
            else:
                return visitor.visitChildren(self)




    def reactant(self):

        localctx = reactParser.ReactantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_reactant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << reactParser.SCIENTIFIC_NUMBER) | (1 << reactParser.PLUS) | (1 << reactParser.MINUS))) != 0):
                self.state = 114
                self.scientific()


            self.state = 117
            self.symbol()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CvalueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(reactParser.ScientificContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_cvalue

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCvalue" ):
                return visitor.visitCvalue(self)
            else:
                return visitor.visitChildren(self)




    def cvalue(self):

        localctx = reactParser.CvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.scientific()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(reactParser.SymbolContext,0)


        def EQUAL(self):
            return self.getToken(reactParser.EQUAL, 0)

        def cvalue(self):
            return self.getTypedRuleContext(reactParser.CvalueContext,0)


        def getRuleIndex(self):
            return reactParser.RULE_constant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = reactParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.symbol()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==reactParser.EQUAL:
                self.state = 122
                self.match(reactParser.EQUAL)
                self.state = 123
                self.cvalue()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(reactParser.SYMBOL, 0)

        def getRuleIndex(self):
            return reactParser.RULE_symbol

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbol" ):
                return visitor.visitSymbol(self)
            else:
                return visitor.visitChildren(self)




    def symbol(self):

        localctx = reactParser.SymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_symbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(reactParser.SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CombineOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(reactParser.PLUS, 0)

        def getRuleIndex(self):
            return reactParser.RULE_combineOperator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCombineOperator" ):
                return visitor.visitCombineOperator(self)
            else:
                return visitor.visitChildren(self)




    def combineOperator(self):

        localctx = reactParser.CombineOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_combineOperator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(reactParser.PLUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScientificContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCIENTIFIC_NUMBER(self):
            return self.getToken(reactParser.SCIENTIFIC_NUMBER, 0)

        def PLUS(self):
            return self.getToken(reactParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(reactParser.MINUS, 0)

        def getRuleIndex(self):
            return reactParser.RULE_scientific

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScientific" ):
                return visitor.visitScientific(self)
            else:
                return visitor.visitChildren(self)




    def scientific(self):

        localctx = reactParser.ScientificContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_scientific)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==reactParser.PLUS or _la==reactParser.MINUS:
                self.state = 130
                _la = self._input.LA(1)
                if not(_la==reactParser.PLUS or _la==reactParser.MINUS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 133
            self.match(reactParser.SCIENTIFIC_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





